--- a/index.html
+++ b/index.html
@@ -1,7 +1,250 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Stellar by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-    <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-    </body>
+	<head>
+		<title>Yasong Chen's Homepage</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header" class="alt">
+						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<h1>Yasong Chen 陈亚松</h1>
+						<!--
+						<p>Just another free, fully responsive site template<br />
+						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+						-->
+					</header>
+
+				<!-- Nav -->
+					<nav id="nav">
+						<ul>
+							<li><a href="#intro" class="active">Introduction</a></li>
+							<li><a href="#pulicat">Publications</a></li>
+							<li><a href="#exper">Experiences</a></li>
+							<li><a href="#pat">Patents</a></li>
+						</ul>
+					</nav>
+
+				<!-- Main -->
+					<div id="main">
+
+						<!-- Introduction -->
+							<section id="intro" class="main">
+								<div class="spotlight">
+									<div class="content">
+										<header class="major">
+											<h2>Introduction</h2>
+										</header>
+										<p>
+											Hi, I'm Yasong Chen, a full-time teacher majoring in software engineering at <a href="https://www.hjnu.edu.cn/"> Hanjiang Normal University</a>.
+											Prior to that, I worked as an algorithm application engineer at <a href="https://www.dahuatech.com/about/company.html">DaHuaTech</a>.
+										</p>
+										<p>
+											I graduated from Central China Normal University(CCNU) with a Bachelor's and a Master's degree, under the supervision of Associate Professor Chen Jia. Recently, my research interest lies at computer vision, and focuses on image/video segmentation specifically.
+										</p>
+										<!--
+										<ul class="actions">
+											<li><a href="generic.html" class="button">Learn More</a></li>
+										</ul>
+										-->
+									</div>
+									<span class="image"><img src="images/pic01.png" alt="" /></span>
+								</div>
+							</section>
+
+						<!-- First Section -->
+							<section id="pulicat" class="main">
+								<div class="container">
+									<header class="major">
+										<h2>Publications</h2>
+									</header>
+									<!--
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/pic_cross.png" alt="" /></a>
+											<div class="inner">
+												<h3><a href="https://www.sciengine.com/SCIS/doi/10.1007/s11432-021-3515-6" >
+													<b>Image co-segmentation based on pyramid features cross-correlation network </b></a>
+												</h3>
+												<p> Jia Chen, <b>Yasong Chen</b>, Weihao Li, Zhi Liu, Sannyuya Liu, Zongkai Yang <br/>
+													<i>Science China Information Sciences 2022</i>
+												</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<div class="inner">
+												<h3><a href="https://www.sciencedirect.com/science/article/abs/pii/S0950705120306791" >
+													<b>Channel and spatial attention based deep object co-segmentation</b></a>
+												</h3>
+												<p> Jia Chen, <b>Yasong Chen</b>, Weihao Li, Guoqin Ning, Mingwen Tong, Adrian Hilton <br/>
+													<i>Knowledge-Based Systems 2021</i>
+												</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<div class="inner">
+												<h3><a href="https://kns.cnki.net/kcms2/article/abstract?v=D99zBTMMfgz2ZyI4joq8VW0CC3ofwjalktLtYWB5AAoSEZa40ILsQuaYM78taRBK0IYxU9grBC99ZrKclEakDCTzBO98Y-jqEmZbZzhmxnm5qALPR00ZvBxpXbL_5NFBzXFTNCuBSgkf5SEw1AF2PCebyCAelZmDsLtAhyyjgpo=&uniplatform=NZKPT" >
+													<b>深度学习在视频对象分割中的应用与展望</b></a>
+												</h3>
+												<p> 陈加, <b>陈亚松</b>, 李伟浩, 田元, 刘智, 何英 <br/>
+													<i>计算机学报 2021</i>
+												</p>
+											</div>
+										</article>
+									</div>
+									-->
+									<div class="container">
+										<article>
+											<h3><a href="https://www.sciengine.com/SCIS/doi/10.1007/s11432-021-3515-6" >
+												<b>Image co-segmentation based on pyramid features cross-correlation network </b></a>
+											</h3>
+											<p> Jia Chen, <b>Yasong Chen</b>, Weihao Li, Zhi Liu, Sannyuya Liu, Zongkai Yang <br/>
+												<i>Science China Information Sciences 2023</i>
+											</p>
+										</article>
+										<article>
+											<h3><a href="https://www.sciencedirect.com/science/article/abs/pii/S0950705120306791" >
+												<b>Channel and spatial attention based deep object co-segmentation</b></a>
+											</h3>
+											<p> Jia Chen, <b>Yasong Chen</b>, Weihao Li, Guoqin Ning, Mingwen Tong, Adrian Hilton <br/>
+												<i>Knowledge-Based Systems 2021</i>
+											</p>
+										</article>
+										<article>
+											<h3><a href="https://kns.cnki.net/kcms2/article/abstract?v=D99zBTMMfgz2ZyI4joq8VW0CC3ofwjalktLtYWB5AAoSEZa40ILsQuaYM78taRBK0IYxU9grBC99ZrKclEakDCTzBO98Y-jqEmZbZzhmxnm5qALPR00ZvBxpXbL_5NFBzXFTNCuBSgkf5SEw1AF2PCebyCAelZmDsLtAhyyjgpo=&uniplatform=NZKPT" >
+												<b>深度学习在视频对象分割中的应用与展望</b></a>
+											</h3>
+											<p> 陈加, <b>陈亚松</b>, 李伟浩, 田元, 刘智, 何英 <br/>
+												<i>计算机学报 2021</i>
+											</p>
+										</article>
+									</div>
+								</div>
+							</section>
+
+						<!-- Second Section -->
+							<section id="exper" class="main">
+								<header class="major">
+									<h2>Experiences</h2>
+								</header>
+								<div class="container">
+									<article>
+										</p>
+										<i>2023.09 ~ 至今   </i>
+										汉江师范学院  软件工程专业专任教师</br>
+										<i>2020.07 ~ 2023.08</i>
+										浙江大华技术股份有限公司  先进技术研究院  算法应用工程师</br>
+										<i>2017.09 ~ 2020.06</i>
+										华中师范大学  人工智能教育学部  硕士研究生学习</br>
+										<i>2017.03 ~ 2017.09</i>
+										深圳哈工大交通  算法实习</br>
+										<i>2012.09 ~ 2016.06</i>
+										华中师范大学  数字媒体技术专业  本科学习</br>
+										</p>
+									</article>
+								</div>
+							</section>
+
+						<!-- third Section -->
+							<section id="pat" class="main">
+								<header class="major">
+									<h2>Patents</h2>
+								</header>
+								<div class="container">
+									<article>
+										</p>
+										<a href="https://kns.cnki.net/kcms2/article/abstract?v=HjlF_Ii0mbn5hZoEMaZLl7kK88i0zLlcXcLY7D4ea77UWDCkavBnGpEG3aw_XrCoUJV32ykrzuqgfmY_y8KQbnzp7c00NloWKDVSLa5iur9COZrA9PQbkS7DK_2J7OIPsMRWGx24r9xItUfepXDVstf1Tl1FXLkzla7mOU_LPJLnzuG0hRtKQQMllg466nm15Dmn0lJdKvs=&uniplatform=NZKPT">
+										   目标跟踪方法及相关装置</a> <i>2021(已授权, 排序一)</i></br>
+										<a href="https://kns.cnki.net/kcms2/article/abstract?v=HjlF_Ii0mbnJukhYfiUJdy6zDZE7CUOHXkPqi8vAYgHcKSq8q7nVcx5XoXz8Tx0BLfsxVvJoAdndzNajJHJqptReRtMfCAx0x_H6nyvoGzkUUBSQQvhYKjCW3vB2r0BYGw1YBB_v4d-VtciqUxfl2oJaUL5t2CCHBjm48p2wsppGougqAGUKjVcwMxaAqmpCa6rxQy_q3FE=&uniplatform=NZKPT">
+											跟踪对象的确定方法及装置、存储介质、电子装置</a> <i>2022(在实审, 排序一)</i></br>
+										<a href="https://kns.cnki.net/kcms2/article/abstract?v=HjlF_Ii0mbmMdMlSlV6639LQIjrZw1Wc-bXVEUcpFeEoy3k4II3xcs2MziaXNfNO0vtoDtgS5vlNXZZxqRZkSdRN_MNLGDI6_0z7gt49Kbhq-Jm7BiEq8JN2E9qBHX3wcwd2lU6xiP7ifOUyXr3ONizQugapBBQNr6DePknLhnSQZt9kCe14z3R_hiCydauEsCrkv_Q-x9s=&uniplatform=NZKPT">
+											目标对象的流量统计方法、电子设备以及存储介质</a> <i>2022(在实审, 排序一)</i></br>
+										<a href="https://kns.cnki.net/kcms2/article/abstract?v=HjlF_Ii0mbl6a_CKArKQnXDkWFY2P6nchaQSvTOw4FW9OJi6BqEsWn2TlhkGUOjOYoBpikduzGx4s2WuLVEfGP5n7yrvOujx3NdVXpQXMK1r3M5dNclJBBkSzgs3TyArvEKF66ZQS63_zyI1hNrgF7R5xEg46e4BxctLe0IAnBwBKGzvhHJVoD1W8aVJymwvMDNyPi3tG6s=&uniplatform=NZKPT">
+											一种文本识别方法、装置、终端及计算机可读存储介质</a> <i>2023(在实审, 排序一)</i></br>
+										<a href="https://kns.cnki.net/kcms2/article/abstract?v=HjlF_Ii0mbm3BMfaH8A42zkcPGffl_ndTF4Sk48axvFDcAsrn3_Clo41jjA22s7nCGdd_YgekWi_MQXRoo2UnNArEAwsd-rib8R5UcGFVyXjDlKE9ZpudjLVxtlMfE8QooGOm4NAnIm2ePb8WlQiTfwAtyx3WNJDtM3AT19dboy4uXNkXjbDFhaM_-c9tFOun2ECDw7lwTQ=&uniplatform=NZKPT">
+											一种目标信息的检测方法、终端及计算机可读存储介质</a> <i>2023(在实审, 排序四)</i></br>
+										<a href="https://kns.cnki.net/kcms2/article/abstract?v=HjlF_Ii0mbmhHg_GlaOLP5DnPlY_SO4pULMtPhQJVz5UFrvMksMEtQmBqydrEL_nQeG6OWvR7PFX9_M8L0j42OITFdNbim22tYLL5tbAQ7zW-qvGDLH2R4N_M-Msucv2lKE1DJQA61qB-iaruB34IWBmFWMX6t_14gHvByUGvaUCNcbkTZwg2fxb-3Q9rcLv1oisSa_esm4=&uniplatform=NZKPT">
+											一种船名识别方法、电子设备及存储介质</a> <i>2023(在实审, 排序二)</i></br>
+										<a href="https://kns.cnki.net/kcms2/article/abstract?v=HjlF_Ii0mblu5XZTM5xo2dULVnR0Yml0n1J04lttx34jlt6jO6XxC2Wg_bnqQKyEiU0NPbKFGyJ1uPp8OxQWLqhqvY32XOdc0EJ0T8Mn0yxYW84JmVuplyEOzKWi8FZsvlayHgnuY1U_nkpuslU9G2zv4143qgLBOINKkXJVtZyK3R_g72X-AVm7HioT7Mym5oaxpSau_MM=&uniplatform=NZKPT">
+											一种文本识别方法、装置、终端及计算机可读存储介质2</a> <i>2023(在实审, 排序一)</i></br>
+										<a href="https://kns.cnki.net/kcms2/article/abstract?v=HjlF_Ii0mbkEbvNBl-PPPtPwEQf-DoUZVf04Jpg1fVm26OZAMjVOWW_kI7gTd2_v7lougAJWaI-ZMeiSsBgIxsxkoNqHtQ8Am1grkJhavh2kh4htQF4qXd81EjNlaiF9juxHsp0ww-ajMRssZ-XPWqM1QFbXS95AccWcVO10IIUsTaiN8gLbqRG337RVMqwcXw9t3qOxA8w=&uniplatform=NZKPT">
+											一种火源检测方法、系统及装置</a> <i>2023(在实审, 排序一)</i></br>
+										<a href="https://kns.cnki.net/kcms2/article/abstract?v=HjlF_Ii0mbku6ukWB0T_fFoj_oyYp2HJ57K39bNKND2b705-ETiwOgVAXUg9yxs20dGTAoQMwVBNG9BeyktLWa7vBhI8Ob5lHs8NkWiuxEI43vuReuXA-5-KDccT-5cvShI_EGnw3NHfErA4uk7EAjqPJfro_fs818UP15EJuQRE9YuSCGmssDUKvvazwSFWaBzv4428VgI=&uniplatform=NZKPT">
+											数据增强方法、数据增强装置以及计算机存储介质</a> <i>2024(在实审, 排序二)</i></br>
+										<a href="https://kns.cnki.net/kcms2/article/abstract?v=HjlF_Ii0mbmCEd3kIzfsI4MRH-R9ALOcK8w0Du5eIlP21awbEijMp_gO9q19TNc5uZi1oULplFiwrinqmsgWw9X9SpYEyAWldkB2lLoFZND3YaQeo5Mqd193s4Ny5MZn2mwm-17_hx1s7oH6yTM85ceeQNooE5Ub1qqaTrBIsfdEUQGtN71-TPSnNhCNkZQLDUy6tUxIwxw=&uniplatform=NZKPT">
+											模型训练方法、图像分类方法、图像分类装置及存储介质</a> <i>2024(在实审, 排序二)</i></br>
+										<a href="https://kns.cnki.net/kcms2/article/abstract?v=HjlF_Ii0mbnHES1YRKSOZkFFRMUiyDiJgqPakMsdb7dqFPzkcVcMOyozUJQP6Ixvynh3llDh1CxiZGnb6GFcj5i1unyunQGZhb1ZAlIiy0wW1H41kA2AmqXOsCpNsGv3gGojbv6FbzvR49qBUIVe7v6werR9mw7S0tnrFiv6-v4GZIcOliIyxDmlDg5gz65AXbnv_3mhIYQ=&uniplatform=NZKPT">
+											基于视觉模型的数据清洗方法、设备以及存储介质</a> <i>2024(在实审, 排序二)</i></br>
+										</p>
+									</article>
+								</div>
+							</section>
+					</div>
+
+			</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<!--
+						<section>
+							<h2>Aliquam sed mauris</h2>
+							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<ul class="actions">
+								<li><a href="generic.html" class="button">Learn More</a></li>
+							</ul>
+						</section>
+						-->
+						<section>
+							<!--
+							<h2>Etiam feugiat</h2>
+							<dl class="alt">
+								<dt>Address</dt>
+								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+								<dt>Phone</dt>
+								<dd>(000) 000-0000 x 0000</dd>
+								<dt>Email</dt>
+								<dd><a href="#">information@untitled.tld</a></dd>
+							</dl>
+							-->
+							<ul class="icons">
+								<!--
+								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+								<li><a href="https://github.com/yasongchen" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								-->
+								<li><a href="#" class="icon fa-envelope alt"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+							</ul>
+						</section>
+						<p class="copyright">&copy; Yasong Chen. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
