--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 										<i>2020.07 ~ 2023.08</i>
 										浙江大华技术股份有限公司  先进技术研究院  算法应用工程师</br>
 										<i>2017.09 ~ 2020.06</i>
-										华中师范大学  人工智能教育学部  硕士研究生学习</br>
+										华中师范大学  人工智能教育学部  计算机科学与技术数字媒体技术专业 硕士研究生学习</br>
 										<i>2017.03 ~ 2017.09</i>
 										深圳哈工大交通  算法实习</br>
 										<i>2012.09 ~ 2016.06</i>
