--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 											<h2>Introduction</h2>
 										</header>
 										<p>
-											Hi, I'm Yasong Chen, a full-time teacher majoring in software engineering at <a href="https://www.hjnu.edu.cn/"> Hanjiang Normal University</a>.
+											Hi, I'm Yasong Chen, a full-time teacher majoring in software engineering at <a href="https://www.hjnu.edu.cn/"> Hanjiang Normal University</a>(HJNU).
 											Prior to that, I worked as an algorithm application engineer at <a href="https://www.dahuatech.com/about/company.html">DaHuaTech</a>.
 										</p>
 										<p>
